--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
-  shimmer_ai: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +26,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
 
 
 
