--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
+  pinput: ^5.0.1
+  equatable: ^2.0.7
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
