--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   pinput: ^5.0.1
   equatable: ^2.0.7
   dio: ^5.8.0+1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
