--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   equatable: ^2.0.7
   dio: ^5.8.0+1
   url_launcher: ^6.3.2
+  flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
