--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_secure_storage: ^9.2.4
   shared_preferences: ^2.5.3
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
