--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   shared_preferences: ^2.5.3
   toastification: ^3.0.3
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
