--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,18 @@ dependencies:
   flutter_spinkit: ^5.2.2
   image_picker: ^1.2.0
   image_cropper: ^9.1.0
+  stomp_dart_client: ^2.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^4.4.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
