--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   hive_flutter: ^1.1.0
   uuid: ^4.4.0
   path_provider: ^2.1.3
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
