--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,51 +1,62 @@
-name: new_empowerme
-description: "A new Flutter project."
-publish_to: 'none'
-version: 1.0.0+1
+  name: new_empowerme
+  description: "A new Flutter project."
+  publish_to: 'none'
+  version: 1.0.0+1
 
-environment:
-  sdk: ^3.8.1
+  environment:
+    sdk: ^3.8.1
 
-dependencies:
+  dependencies:
+    flutter:
+      sdk: flutter
+    cupertino_icons: ^1.0.8
+    google_fonts: ^6.2.1
+    intl: ^0.20.2
+    flutter_riverpod: ^2.6.1
+    font_awesome_flutter: ^10.8.0
+    cached_network_image: ^3.4.1
+    carousel_slider: ^5.1.1
+    pinput: ^5.0.1
+    equatable: ^2.0.7
+    dio: ^5.8.0+1
+    url_launcher: ^6.3.2
+    flutter_secure_storage: ^9.2.4
+    shared_preferences: ^2.5.3
+    toastification: ^3.0.3
+    flutter_spinkit: ^5.2.2
+    image_picker: ^1.2.0
+    image_cropper: ^9.1.0
+    stomp_dart_client: ^2.0.0
+    hive: ^2.2.3
+    hive_flutter: ^1.1.0
+    uuid: ^4.4.0
+    path_provider: ^2.1.3
+    connectivity_plus: ^7.0.0
+
+  dev_dependencies:
+    flutter_test:
+      sdk: flutter
+    flutter_lints: ^5.0.0
+    hive_generator: ^2.0.1
+    build_runner: ^2.4.9
+    flutter_launcher_icons: ^0.14.4
+
   flutter:
-    sdk: flutter
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  intl: ^0.20.2
-  flutter_riverpod: ^2.6.1
-  font_awesome_flutter: ^10.8.0
-  cached_network_image: ^3.4.1
-  carousel_slider: ^5.1.1
-  pinput: ^5.0.1
-  equatable: ^2.0.7
-  dio: ^5.8.0+1
-  url_launcher: ^6.3.2
-  flutter_secure_storage: ^9.2.4
-  shared_preferences: ^2.5.3
-  toastification: ^3.0.3
-  flutter_spinkit: ^5.2.2
-  image_picker: ^1.2.0
-  image_cropper: ^9.1.0
-  stomp_dart_client: ^2.0.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  uuid: ^4.4.0
-  path_provider: ^2.1.3
-  connectivity_plus: ^7.0.0
+    uses-material-design: true
+    assets:
+      - assets/images/
+      - assets/icons/
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^5.0.0
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.9
 
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/icons/
+  flutter_launcher_icons:
+    name: "EmpowerMe"
 
+    android: true
+
+    image_path: "assets/icons/logo_app.png"
+
+    adaptive_icon_background: "#FFFFFF"
+    adaptive_icon_foreground: "assets/icons/logo_app.png"
 
 
 
