--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@
     uuid: ^4.4.0
     path_provider: ^2.1.3
     connectivity_plus: ^7.0.0
+    flutter_linkify: ^6.0.0
 
   dev_dependencies:
     flutter_test:
