--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@
     path_provider: ^2.1.3
     connectivity_plus: ^7.0.0
     flutter_linkify: ^6.0.0
+    lottie: ^3.3.2
+    flutter_animate: ^4.5.2
+    shimmer: ^3.0.0
 
   dev_dependencies:
     flutter_test:
@@ -47,6 +50,7 @@
     assets:
       - assets/images/
       - assets/icons/
+      - assets/animations/
 
 
   flutter_launcher_icons:
