--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@
     flutter_linkify: ^6.0.0
     lottie: ^3.3.2
     flutter_animate: ^4.5.2
-    shimmer: ^3.0.0
+    skeletonizer: ^2.1.0+1
 
   dev_dependencies:
     flutter_test:
